Block all the non-view input user actions while filter dialog is active

Now all the input actions are divided into two groups: view-transform and
modifying. And the canvas can block any of these action by setting a special
flag, that is checked by the shortcuts matcher.

When the filter dialog opens, it just blocks all the modifying actions,
allowing the view ones at the same time :)

BUG:352747