libs/ui/input/kis_abstract_input_action.h
@@ -23,6 +23,8 @@
 #include <QPoint>
 #include "kritaui_export.h"
 
+#include "KisInputActionGroup.h"
+
 class QPointF;
 class QEvent;
 class KisInputManager;
@@ -113,6 +115,11 @@ public:
      * perfectly acceptable, so 'false' is the default value.
      */
     virtual bool supportsHiResInputEvents() const;
+
+    /**
+     * \return the group of the action the specified \p shortcut belongs to
+     */
+    virtual KisInputActionGroup inputActionGroup(int shortcut) const;
 
     /**
      * The indexes of shortcut behaviours available.
